modal_style.css
/* Button to open modal */
.button {
    border: none;
    background: none;
    cursor: pointer;
    margin: 10px;
    transition: 0.8s;
    position: relative;
    overflow: hidden;
    color: white;
}

/* Button to open modal on hover */
.button:hover {
    -webkit-box-shadow: 0px 0px 5px rgba(255,255,255,0.9);
    box-shadow: 0px 0px 7px rgba(255,255,255,0.9);
    background-color: rgb(233, 170, 233);
    cursor: pointer;
    transform: scale(1.03);
}

/* Modal window */
.modal {
    color: black;
    display: none;
    position: fixed;
    z-index: 2;
    left: 0;
    top: 0;
    height: 100%;
    width: 100%;
    overflow: auto;
    background-color: rgba(0, 0, 0, 0.5);
    animation-name: modalopen;
    animation-duration: 1s;
}

/* Modal content */
.modal-content {
    background-color: #f4f4f4;
    margin: 10% auto;
    width: 56%;
    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0, 0.17); 
}

/* Modal header */
.modal-header{
    background: rgb(212, 154, 212);
    padding: 15px;
    color: white;
}

/* Modal header content */
.modal-header h2{
    margin: 0;
}

/* Modal body content */
.modal-body {
    padding: 20px;
    text-align: center;
}

#show-scene {
    height: 75%;
    width: 120%;
    overflow: hidden;
    border-radius: 5px;
    display: flex;
    justify-content: space-between;
    background-color: white;
}

.show-scene-wrap {
    width: 100%;
    height: 100%;
    display: flex;
    background-color: white;
}

/* Modal footer */
.modal-footer {
    background: rgb(212, 154, 212);
    padding: 10px;
    color: white;
    text-align: center;
}

/* Exit button */
.closeBtn {
    color: white;
    float: right;
    font-size: 30px;
}

/* Exit button on hover and focus */
.closeBtn:hover, .closeBtn:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}

/* Buttons to delete and edit modal info from modal window */
#deleteBtn, #editBtn {
    color: black;
}

/* Modal opening */
@keyframes modalopen {
    from{opacity : 0}
    to{opacity: 1}
}

#dialog-alg-add-content {
    margin-top: 5%;
    margin-bottom: 0%;
}

